# armangrewal007-py

./: .gitignore  Contributing.md  LICENSE  README.md  _automate.sh  armangrewal007.spec  pyproject.toml  sample.sh  setup.cfg
src/armangrewal007/: __init__.py  cli.py
