[metadata]
name = armangrewal007
version = 0.1.0
description = A CLI to display Arman Singh Grewal's resume
author = Arman Singh Grewal
author_email = your.email@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/armangrewal007

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

[options.packages.find]
where = src
